k8s/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  type: NodePort
  selector:
    app: app1
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
