k8s/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  type: NodePort
  selector:
    app: app2
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
